# SwiftUITemplate

./: .gitignore  README.md  cookiecutter.json  justfile  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: setup_dev_environment.py  setup_zsh_environment.zsh  virtual_env.py
templates/Template/{{cookiecutter.app_name}}/: ContentView.swift  TemplateApp.swift
templates/{{cookiecutter.app_name}}/: justfile
templates/{{cookiecutter.app_name}}/Modules/AppLocales/: Package.swift
templates/{{cookiecutter.app_name}}/Scripts/: generateLocales.js
templates/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: ContentView.swift  {{cookiecutter.app_name}}App.swift
templates/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}.xcodeproj/: project.pbxproj
{{cookiecutter.app_name}}/: .gitignore  LICENSE  justfile  package.json
{{cookiecutter.app_name}}/Locales/: en.js
{{cookiecutter.app_name}}/Modules/AppLocales/: .gitignore
{{cookiecutter.app_name}}/Modules/Backend/: Package.swift
{{cookiecutter.app_name}}/Modules/CDPersist/: Package.swift
{{cookiecutter.app_name}}/Modules/Models/: Package.swift
{{cookiecutter.app_name}}/Scripts/: generateLocales.js
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: ContentView.swift  {{cookiecutter.app_name}}App.swift
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}.xcodeproj/: project.pbxproj
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}.xcworkspace/: contents.xcworkspacedata
(+37 files in other folders)
